--- a/src/app/components/pages/candidate-details-page/candidate-details-page.component.html
+++ b/src/app/components/pages/candidate-details-page/candidate-details-page.component.html
@@ -67,7 +67,7 @@
                             </li>
                             <li>
                                 <span>Email</span>
-                                <a href="mailto:{{objToArray[0][1].email}}">{{objToArray[0][1].email}}</a>
+                                <a href="mailto:{{objToArray[0][1].email}}">{{objToArray[0][1].email_id}}</a>
                             </li>
                             <li>
                                 <span>Phone</span>
