--- a/src/app/components/pages/job-details-page/job-details-page.component.css
+++ b/src/app/components/pages/job-details-page/job-details-page.component.css
@@ -24,7 +24,7 @@
   padding-left: 20px;
   margin-bottom: 10px;
   margin-right: 15px;
-} */
+} 
 
 
 .job-card {
@@ -136,6 +136,7 @@
   transition: var(--transition);
   background-color: transparent;
 }
+
 
 .job-card .bookmark-btn:hover {
   background-color: #f1f1f1;
