--- a/src/app/components/pages/job-details-page/job-details-page.component.html
+++ b/src/app/components/pages/job-details-page/job-details-page.component.html
@@ -1,31 +1,32 @@
 <!-- Page Title -->
 <div class="inner-banner">
     <div class="container">
-        <div class="job-card">
+        <div class="job-card" style="width: 670px; height: 220px;">
 
-            <div class="job-image">
-                <img src="assets/images/job/job1.jpg" alt="job-image" style="height: 70px; width:auto;">
+            <div class="job-image mx-3">
+                <img src="assets/images/job/job1.jpg" alt="job-image" style="width: 100px;">
             </div>
             
             <h3>{{ jobToArray[0][1].job_title }}</h3>
 
-            <ul class="list-group list-group-flush">
-                <li  class="list-group-item"><i class="ri-briefcase-line"></i> {{jobToArray[0][1].career_level}}</li>
-                <li class="list-group-item"><i class="ri-profile-line"></i> {{jobToArray[0][1].job_type}} </li>
-                <li class="list-group-item"><i class="ri-award-line"></i> {{jobToArray[0][1].experience}} Years</li>
+            <ul class="list-group list-group-flush" style="font-size: large;">
+                <li  class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-briefcase-line"></i> {{jobToArray[0][1].career_level}}</li>
+                <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-profile-line"></i> {{jobToArray[0][1].job_type}} </li>
+                <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-award-line"></i> {{jobToArray[0][1].experience}} Years</li>
 
                 <!-- <li class="list-group-item">{{ jobToArray[0][1].job_title }}</li> -->
                 <!-- <li class="list-group-item">{{ jobToArray[0][1].job_title }}</li> -->
             </ul>
             <br>
             
+            
             <div class="d-md-flex align-items-center justify-content-between">
-                <div class="last-date">Last Date: {{ jobToArray[0][1].deadline }}</div>
-                <a routerLink="/job-details" class="default-btn" *ngIf="!postajob;">Apply Now</a>
+                <div class="last-date" style="font-size: larger;">Last Date: {{ jobToArray[0][1].deadline }}</div>
+                <a routerLink="/job-details" class="default-btn" *ngIf="postajob;">Apply Now</a>
             </div>
-
-
+            
             <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
+            
         </div>
 
     </div>
@@ -81,7 +82,7 @@
 
 
                     <div class="btn-box">
-                        <a routerLink="/profile-authentication" class="default-btn" *ngIf="!postajob;">Apply Now</a>
+                        <a routerLink="/profile-authentication" class="default-btn" *ngIf="postajob;">Apply Now</a>
                     </div>
                 </div>
             </div>
