--- a/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
+++ b/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
@@ -321,8 +321,8 @@
                             </div> -->
                             
                             <div class="d-md-flex align-items-center justify-content-end">
-                                <li> <i class="ri-wallet-line"></i> {{empjob[1].salary_minimum}} - {{empjob[1].salary_maximum}} / {{empjob[1].salary_type}} </li>
-                                <a (click)="empidPass(empjob[1].id)" routerLink="/post-a-job-edit"> <li style="margin-left: 400px;"><i class="ri-pencil-line"></i>Edit</li></a>
+                                <li style="margin-right: 400px;"> <i class="ri-wallet-line"></i> {{empjob[1].salary_minimum}} - {{empjob[1].salary_maximum}} / {{empjob[1].salary_type}} </li>
+                                <a (click)="empidPass(empjob[1].id)" routerLink="/post-a-job-edit"> <li><i class="ri-pencil-line"></i>Edit</li></a>
                             </div>
                         
 
