--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -20,13 +20,13 @@
                         </a>
                     </li>
                     <li class="nav-item" *ngIf="!postajob;">
-                        <a routerLink="/job-listings" class="nav-link" routerLinkActive="active"
+                        <a routerLink="/jobs/listings" class="nav-link" routerLinkActive="active"
                             [routerLinkActiveOptions]="{exact: true}">
                             Find Jobs
                         </a>
                     </li>
                     <li class="nav-item" *ngIf="postajob;">
-                        <a routerLink="/job-listings" class="nav-link" routerLinkActive="active"
+                        <a routerLink="/jobs/posted" class="nav-link" routerLinkActive="active"
                             [routerLinkActiveOptions]="{exact: true}">
                             Jobs Posted
                         </a>
@@ -159,7 +159,7 @@
                         </a>
                     </li>
                     <li class="nav-item" *ngIf="!postajob;">
-                        <a routerLink="/job-listings" class="nav-link" routerLinkActive="active"
+                        <a routerLink="/job/listings" class="nav-link" routerLinkActive="active"
                             [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
                             Find Jobs
                         </a>
@@ -307,9 +307,10 @@
                         <a *ngIf="isUserLoggedIn;" (click)="logout()" class="default-btn" style="margin-left: 10px;">
                             <i class="ri-user-3-line"></i> Logout
                         </a>
-                        <a *ngIf="isUserLoggedIn;" class="" style="margin-left: 10px; width: fit-content;">
+                        <a *ngIf="isUserLoggedIn;" class="" style="margin-left: 10px; width: fit-content;" (click)="openMyProfile()">
                             <img src="https://icones.pro/wp-content/uploads/2021/02/icone-utilisateur-vert.png" alt="" srcset="" style="max-height: 50px;">
                         </a>
+                        
                     </div>
                 </div>
             </div>
