--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -19,6 +19,12 @@
                             Home
                         </a>
                     </li>
+                    <li class="nav-item" *ngIf="postajob;">
+                        <a (click)="openDashboard()" class="nav-link" routerLinkActive="active"
+                            [routerLinkActiveOptions]="{exact: true}">
+                            Dashboard
+                        </a>
+                    </li>
                     <li class="nav-item" *ngIf="!postajob;">
                         <a routerLink="/jobs/listings" class="nav-link" routerLinkActive="active"
                             [routerLinkActiveOptions]="{exact: true}">
