my profile page added

--- a/src/app/components/pages/my-profile-employer/company-details-page.component.html
+++ b/src/app/components/pages/my-profile-employer/company-details-page.component.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-lg-8 col-md-12">
                 <div class="company-details-desc">
-                    <h4>About Our Company</h4>
+                    <h4>My Company</h4>
                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus.ands Pellentesque placerat
                         maecenas egestas ullamcorper sed nunc. Vitae egestas tellus amet nulla something loss Pellentesque placerat maecenas egestas ullamcorper sed nunc.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius.</p> -->
