--- a/src/app/components/common/recent-jobs/recent-jobs.component.html
+++ b/src/app/components/common/recent-jobs/recent-jobs.component.html
@@ -20,7 +20,7 @@
                             </a>
                         </div>
 
-                        <h3> <a (click)="rJobidPass(rjob[1].id)" routerLink="/job-details"> {{ rjob[1].job_title }}</a></h3>
+                        <h3> <a (click)="rJobidPass(rjob[1].id)" routerLink="/jobs/details"> {{ rjob[1].job_title }}</a></h3>
                                 <ul class="job-list1" style="font-size: medium;">
 
                                     <li><i class="ri-briefcase-line"></i> {{rjob[1].career_level}} </li>
