--- a/src/app/components/pages/job-listings-page/job-listings-page.component.html
+++ b/src/app/components/pages/job-listings-page/job-listings-page.component.html
@@ -74,7 +74,7 @@
                                     </a>
                                 </div>
                                 
-                                <h3> <a (click)="idPass(job[1].id)" routerLink="/job-details"> {{ job[1].job_title }}</a></h3>
+                                <h3> <a (click)="idPass(job[1].id)" routerLink="/jobs/details"  > {{ job[1].job_title }}</a></h3>
                                 <ul class="job-list1" style="font-size: medium;">
 
                                     <li><i class="ri-briefcase-line"></i> {{job[1].career_level}}</li>
