--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -35,7 +35,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/employer-dashboard">
+                                <a routerLink="/employer/dashboard">
                                     Employer Dashboard
                                 </a>
                             </li>
@@ -72,7 +72,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/candidate-dashboard">
+                                <a routerLink="/candidate/dashboard">
                                     Candidate Dashboard
                                 </a>
                             </li>
