candidate profile form added

--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -27,7 +27,7 @@
                     <div class="last-date">{{objToArray[0][1].mobile_number}}</div>
                 </a><br>
 
-                <a routerLink="/candidate-details" class="default-btn">View My Profile</a>
+                <a routerLink="/candidate/my-profile" class="default-btn">View My Profile</a>
             </div>
             <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
         </div>
@@ -146,12 +146,12 @@
         <div class="job-card">
             <div class="content">
                 <div class="job-image">
-                    <a routerLink="/job-details">
+                    <a routerLink="/jobs/details">
                         <img src="assets/images/job/job1.jpg" alt="job-image">
                     </a>
                 </div>
                 <div class="px-5">
-                    <h4 class=""><a routerLink="/job-details">Company Name - A</a></h4>
+                    <h4 class=""><a routerLink="/jobs/details">Company Name - A</a></h4>
 
                     <div class="container-fluid">
                         <div class="row">
