--- a/src/app/components/pages/candidate-details-page/candidate-details-page.component.html
+++ b/src/app/components/pages/candidate-details-page/candidate-details-page.component.html
@@ -2,14 +2,14 @@
 <div class="inner-banner">
     <div class="container">
         <div class="inner-title text-center">
-            <h3>Candidate Details</h3>
+            <h3>My Profile</h3>
             <ul>
                 <li>
                     <a routerLink="/">
                         Home
                     </a>
                 </li>
-                <li>Candidate Details</li>
+                <li>My Details</li>
             </ul>
         </div>
     </div>
