--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -33,12 +33,12 @@
                     <div class="col-lg-12 col-md-12">
                         <div class="form-group">
                             <label>Full Name <span>*</span></label>
-                            <input type="text" class="form-control" id="candidate_name" required>
+                            <input type="text" class="form-control" id="candidate_name" value="{{objToArray[0][1].name}}" required>
                         </div>
 
                         <div class="form-group">
                             <label>Head Line <span>*</span></label>
-                            <input type="text" class="form-control" id="candidate_headline" required>
+                            <input type="text" class="form-control" id="candidate_headline" value="" required>
                         </div>
 
 
@@ -81,14 +81,14 @@
                                 <option value="Part Time">Part Time</option>
                                 <option value="Temporary">Temporary</option>
                             </select> -->
-                            <input type="text" class="form-control" id="candidate_email" required>
+                            <input type="text" class="form-control" id="candidate_email" value = "{{objToArray[0][1].email_id}}" required>
 
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Phone Number <span>*</span> </label>
-                            <input type="number" class="form-control" id="candidate_phone_number">
+                            <input type="number" class="form-control" id="candidate_phone_number" value = "{{objToArray[0][1].mobile_number}}" required>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
@@ -224,6 +224,7 @@
                             </div>
                         </div>
                     </div>
+                    
 
 
 
@@ -271,6 +272,7 @@
                             <p>Maximum file size: 2 MB</p>
                         </div>
                     </div> -->
+
                     <div class="col-lg-12 col-md-12">
                         <button type="button" (click)="createJob()" class="default-btn">Submit & Preview</button>
                     </div>
