--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -56,9 +56,9 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
-                            <label>Location <span>*</span></label>
-                            <input type="text" class="form-control" id="candidate_location" required>
-                            <!-- <select class="form-select" id="category_id" required>
+                            <label>Location <span></span></label>
+                            <input type="text" class="form-control" id="candidate_location">
+                            <!-- <select class="form-select" id="category_id">
                                 
                                 <option selected>Accounting / Finance</option>
                                 <option value="Automotive Jobs">Automotive Jobs</option>
@@ -74,7 +74,7 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Email <span>*</span></label>
-                            <!-- <select class="form-select" id="type_id" required>
+                            <!-- <select class="form-select" id="type_id">
                                 <option selected>Freelance</option>
                                 <option value="Full Time">Full Time</option>
                                 <option value="Internship">Internship</option>
@@ -143,7 +143,7 @@
                      -->
 
                      
-                     <div class="col-lg-6 col-md-6">
+                     <!-- <div class="col-lg-6 col-md-6">
                          <div class="form-group">
                              <label>Qualification <span>*</span></label>
                              <select class="form-select" id="qualification" required>
@@ -154,18 +154,33 @@
                                  <option value="Doctorate Degree">Doctorate Degree</option>
                              </select>
                          </div>
+                     </div> -->
+
+                     <div class="col-lg-6 col-md-6">
+                         <div class="form-group">
+                             <label>Upload Resume (.pdf, .doc) <span>*</span></label>
+                             <input type="file" class="form-control" id="customFile" accept=".doc, .docx, .pdf" required>
+
+                             <!-- <select class="form-select" id="qualification" required>
+                                 <option selected>Certificate</option>
+                                 <option value="Associate Degree">Associate Degree</option>
+                                 <option value="Bachelor Degree">Bachelor Degree</option>
+                                 <option value="Master Degree">Master Degree</option>
+                                 <option value="Doctorate Degree">Doctorate Degree</option>
+                             </select> -->
+                         </div>
                      </div>
 
                      <div class="col-lg-6 col-md-6">
                          <div class="form-group">
                              <label>Skills (Separate with commas) <span>*</span></label>
-                             <input type="text" class="form-control">
+                             <input type="text" class="form-control" required>
                          </div>
                      </div>
                     <!-- <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Career Level <span>*</span></label>
-                            <select class="form-select" id="career_level" required>
+                            <select class="form-select" id="career_level">
                                 <option selected>Manager</option>
                                 <option value="Officer">Officer</option>
                                 <option value="Student">Student</option>
@@ -180,11 +195,15 @@
                             <label class="mt-3">Experience <span>*</span></label>
                             
                             
-                            <button class="default-btn p-2" (click)="addExp()" style="font-size: small;">Add Experience</button>
+                            <button class="default-btn p-2" (click)="addExp()" type="button" style="font-size: small;">Add Experience</button>
                             
                             
                             <div *ngFor="let value of values_exp; let i = index">
                                     <br>
+
+                                    <div style="font-size: large; font-weight: 400;">Experience:{{i+1}}</div>
+                                    <br>
+
                                     <input type="text" class="form-control" name="value{(i)}" id="expRole{{i}}" placeholder="Role">
                                     <br>
                                     <input type="text" class="form-control" name="value{(i)}" id="expCompanyName{{i}}" placeholder="Company Name">
@@ -195,7 +214,7 @@
                                     End Date:
                                     <input type="date" class="form-control" name="value{(i)}" id="expDateEnd{{i}}">
                                     <br>
-                                    <button class="default-btn p-2" style = "font-size: small;" (click)="remExp(i)">Remove Experience</button>
+                                    <button class="default-btn p-2" style = "font-size: small;"type="button" (click)="remExp(i)">Remove Experience</button>
                             </div>
                         </div>
                     </div>
@@ -205,10 +224,10 @@
                             <label class="mt-3">Education Details<span>*</span></label>
                             
                             
-                            <button class="default-btn p-2" (click)="addEdu()" style="font-size: small;">Add Experience</button>
+                            <button (click)="addEdu()" class="default-btn p-2" type="button" style="font-size: small;">Add Education</button>
                             
                             
-                            <div *ngFor="let value of values_edu; let i = index">
+                            <!-- <div *ngFor="let value of values_edu; let i = index">
                                     <br>
                                     <input type="text" class="form-control" name="value{(i)}" id="eduType{{i}}" placeholder="Education Type">
                                     <br>
@@ -221,7 +240,34 @@
                                     <input type="date" class="form-control" name="value{(i)}" id="eduDateEnd{{i}}">
                                     <br>
                                     <button class="default-btn p-2" style = "font-size: small;" (click)="remEdu(i)">Remove Education</button>
-                            </div>
+                            </div> -->
+
+                            <form id="exp_form" *ngFor="let value of values_edu; let i = index">
+
+                                <div class="form-group">
+
+                                    <div id="edu_data">
+                                    <br>
+                                    <div style="font-size: large; font-weight: 400;">Education:{{i+1}}</div>
+                                    <br>
+                                    <input type="text" class="form-control" name="" id = "eduType{{i}}" placeholder="Education Type">
+                                    <br>
+                                    <input type="text" class="form-control" name="" id="eduInstituteName{{i+1}}" placeholder="Institute Name">
+                                    <br>
+
+                                    Start Date:
+                                    <input type="date" class="form-control" name="" id="eduDateStart{{i+1}}">
+                                    <br>
+
+                                    End Date:
+                                    <input type="date" class="form-control" name="" id="eduDateEnd{{i+1}}">
+                                    <br>
+
+                                    <button (click)="remEdu(i)"class="default-btn p-2" type="button" style = "font-size: small;">Remove Education</button>
+                                    </div>
+                                </div>
+
+                            </form>
                         </div>
                     </div>
                     
@@ -241,14 +287,14 @@
                     <!-- <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Application Deadline Date <span>*</span></label>
-                            <input type="date" class="form-control" id="deadline" required>
+                            <input type="date" class="form-control" id="deadline">
                         </div>
                     </div> -->
 
                     <!-- <div class="col-lg-6 col-md-6" style="display: none;">
                         <div class="form-group">
                             <label>Address <span>*</span></label>
-                            <input type="text" class="form-control" id="friendly_address" required>
+                            <input type="text" class="form-control" id="friendly_address">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6" style="display: none;">
@@ -261,7 +307,7 @@
                                 <option value="3">Miami</option>
                                 <option value="4">Paris</option>
                             </select>
-                            <input type="text" class="form-control" id="location" required>
+                            <input type="text" class="form-control" id="location">
 
                         </div>
                     </div> -->
@@ -273,11 +319,12 @@
                         </div>
                     </div> -->
 
-                    <div class="col-lg-12 col-md-12">
-                        <button type="button" (click)="createJob()" class="default-btn">Submit & Preview</button>
-                    </div>
                 </div>
             </form>
+        </div>
+        <br>
+        <div class="col-lg-12 col-md-12">
+            <button type="button" class="default-btn">Submit & Preview</button>
         </div>
     </div>
 </div>
