--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -302,7 +302,7 @@
                             <i class="ri-user-3-line"></i> Candidate
                         </a>
 
-                        <a *ngIf="!isUserLoggedIn;" routerLink="/company" class="default-btn" style="margin-left:10px;">
+                        <a *ngIf="!isUserLoggedIn;" routerLink="/employer" class="default-btn" style="margin-left:10px;">
                             <i class="ri-user-3-line"></i> Employer
                         </a>
 
