edit page url updated

--- a/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
+++ b/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
@@ -388,7 +388,7 @@
                                     </li>
                                     <a
                                         (click)="empidPass(empjob[1].id)"
-                                        routerLink="/post-a-job-edit"
+                                        routerLink="/jobs/edit"
                                     >
                                         <li>
                                             <i class="ri-pencil-line"></i>Edit
