bookmark page initial commit

--- a/src/app/components/common/recent-jobs/recent-jobs.component.html
+++ b/src/app/components/common/recent-jobs/recent-jobs.component.html
@@ -55,7 +55,7 @@
                         <div class="price">$150 - $180 <span>/Per Week</span></div>
                     </div> -->
 
-                    <!-- <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button> -->
+                    <button class="bookmark-btn" *ngIf="canBmked"><i class="ri-bookmark-line"></i></button>
 
                 </div>
 
