--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -19,7 +19,7 @@
                             Home
                         </a>
                     </li>
-                    <li class="nav-item" *ngIf="postajob;">
+                    <li class="nav-item" *ngIf="isAccountLoggedIn;">
                         <a (click)="openDashboard()" class="nav-link" routerLinkActive="active"
                             [routerLinkActiveOptions]="{exact: true}">
                             Dashboard
