added-home-page-images

--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -62,9 +62,9 @@
         </div>
         <div class="shape9">
             <img src="assets/images/banner/user3.jpg" alt="user">
-            <div class="other-into-content">
+            <!-- <div class="other-into-content">
                 <img src="assets/images/banner/shape5.jpg" alt="shape">
-            </div>
+            </div> -->
         </div>
         <div class="shape10">
             <img src="assets/images/banner/shape3.png" alt="shape">
