--- a/src/app/components/pages/emp-account/emp-account.html
+++ b/src/app/components/pages/emp-account/emp-account.html
@@ -32,7 +32,7 @@
                             <input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
                         <div class="forgot-password-wrap">
-                            <a routerLink="/forgot-password" class="lost-your-password">Forgot password?</a>
+                            <a routerLink="/forgot-password" class="lost-your-password" href="#/forgot-password">Forgot password?</a>
                         </div>
                         <button (click)="onClick()" type="button">Login</button>
                     </form>
