--- a/src/app/components/pages/forgot-password-ui/forgot-password-page.component.html
+++ b/src/app/components/pages/forgot-password-ui/forgot-password-page.component.html
@@ -1,1 +1,115 @@
+<!-- Page Title -->
+<div class="inner-banner">
+    <div class="container">
+        <div class="inner-title text-center">
+            <h3>Forgot Your Password</h3>
+            <ul>
+                <li>
+                    <a routerLink="/">
+                        Home
+                    </a>
+                </li>
+                <li>Forgot Password</li>
+            </ul>
+        </div>
+    </div>
+</div>
 
+<!-- My Account -->
+<div class="profile-authentication-area ptb-100">
+    <div class="container">
+        <div class="row mx-5">
+            <div class="col-lg-7 col-md-12">
+                <div class="login-form">
+                    <h2 class="mb-1">Password Reset</h2>
+                    <p class="">Verify Your Mobile Number</p>
+                    <form>
+                        <div class="form-group">
+                            <label>Mobile Number</label>
+                            <input type="number" class="form-control mb-1" id="mobile_number" placeholder="Enter your Mobile Number">
+                        </div>
+                        <button type="button" (click)="forgotVerify()" class="w-25 p-1 m-0">Send OTP</button>
+
+                        <br>
+                        <!-- <br> -->
+                        
+                        <p class="mb-2 mt-2">OTP Send Successfully</p>
+                        <div class="forgot-password-wrap">
+                            <a href="##">Resend OTP</a>
+                        </div>
+                        <p class="mt-2">OTP Send Successfully</p>
+                        
+                        <!-- <br> -->
+
+
+                        <div class="form-group">
+                            <label>Enter OTP</label>
+                            <input type="number" class="form-control" id="otp" placeholder="Enter OTP">
+                        </div>
+                        <!-- <div class="form-group">
+                            <label>Password</label>
+                            <input type="password" class="form-control" id="password" placeholder="Password">
+                        </div> -->
+                        <!-- <div class="forgot-password-wrap">
+                            <a routerLink="/forgot-password" class="lost-your-password">Forgot password?</a>
+                        </div> -->
+                        <button type="button" class="mt-1" (click)="forgotVerify()">Verify</button>
+                        <br>
+                        <br>
+                        <i class="ri-check-line"></i> OTP correct
+                        <i class="ri-close-line"></i> OTP incorrect
+
+
+                    </form>
+                </div>
+            </div>
+
+            <div class="col-lg-5 col-md-12">
+                <div class="login-form">
+                    <form name="password_reset">
+                        <div class="form-group">
+                            <label>Enter New Password</label>
+                            <input type="password" class="form-control mb-1" id="new_password" placeholder="Enter New Password">
+                        </div>
+
+                        <div class="form-group">
+                            <label>Confirm New Password</label>
+                            <input type="password" class="form-control mb-1" id="confirm_new_password" placeholder="Confirm New Password">
+                        </div>
+                        <button type="button" class="mt-1">Done</button>
+
+                    </form>
+                </div>
+            </div>
+            <!-- <div class="col-lg-6 col-md-12">
+                <div class="register-form">
+                    <h2>Register</h2>
+                    <form>
+                        <div class="form-group">
+                            <label>Full Name</label>
+                            <input type="text" class="form-control" placeholder="Full Name" id="full_name" name="full_name">
+                        </div>
+                        <div class="form-group">
+                            <label>Email</label>
+                            <input type="email" class="form-control" placeholder="Email" id="email_id">
+                        </div>
+                        <div class="form-group">
+                            <label>Mobile Number (+91)</label>
+                            <input type="number" class="form-control" placeholder="Mobile Number" id="register_mobile">
+                        </div>
+                        <div class="form-group">
+                            <label>Password</label>
+                            <input type="password" class="form-control" placeholder="Password" id="register_password">
+                        </div>
+                        <div class="form-group">
+                            <label>Confirm Password</label>
+                            <input type="password" class="form-control" placeholder="Password" id="register_confirm_password">
+                        </div>
+                        <p class="description">The password should be at least eight characters long. To make it stronger, use upper and lower case letters, numbers, and symbols like ! " ? $ % ^ & )</p>
+                        <button type="button" >Register</button>
+                    </form>
+                </div>
+            </div> -->
+        </div>
+    </div>
+</div>
