--- a/src/app/components/pages/forgot-password-ui/forgot-password-page.component.html
+++ b/src/app/components/pages/forgot-password-ui/forgot-password-page.component.html
@@ -26,20 +26,22 @@
                     <form>
                         <div class="form-group">
                             <label>Mobile Number</label>
-                            <input type="number" class="form-control mb-1" id="mobile_number" placeholder="Enter your Mobile Number">
+                            <input type="number" class="form-control mb-0" id="mobile_number" placeholder="Enter your Mobile Number">
                         </div>
-                        <button type="button" (click)="forgotVerify()" class="w-25 p-1 m-0">Send OTP</button>
+                        <button type="button" (click)="forgotVerify()" class="w-25 p-1 mt-0">Send OTP</button>
 
                         <br>
                         <!-- <br> -->
                         
                         <p class="mb-2 mt-2">OTP Send Successfully</p>
+                        <br>
                         <div class="forgot-password-wrap">
                             <a href="##">Resend OTP</a>
                         </div>
                         <p class="mt-2">OTP Send Successfully</p>
                         
-                        <!-- <br> -->
+                        <br>
+                        <br>
 
 
                         <div class="form-group">
