show pricing chart when employer is logged in

--- a/src/app/components/common/pricing/pricing.component.html
+++ b/src/app/components/common/pricing/pricing.component.html
@@ -1,4 +1,4 @@
-<div class="pricing-area ptb-100">
+<div class="pricing-area ptb-100" *ngIf="showPricingChart;">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-12">
