Text on Button corrected

--- a/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
+++ b/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
@@ -197,7 +197,7 @@
                         </div>
                     </div> -->
                     <div class="col-lg-12 col-md-12">
-                        <button type="button" (click)="createJob()" class="default-btn">Submit & Preview</button>
+                        <button type="button" (click)="createJob()" class="default-btn">Post Job</button>
                     </div>
                 </div>
             </form>
