id issue rectified

--- a/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
+++ b/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                        <div class="form-group" id="minimum_salary">
+                        <div class="form-group">
                             <label>Min. Salary <span></span></label>
                             <input type="text" class="form-control" id="minimum_salary">
                         </div>
